--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>I started learning mearn</title>
 </head>
 <body>
-    
+    <img src="m.jpg" alt="">
+    <img src="mn.jpg" alt="">
 </body>
 </html>
