--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <img src="m.jpg" alt="">
         <img src="mn.jpg" alt="">
     </div>
+    <img src="GroupX.png" alt="">
 
 </body>
 </html>
